--- a/csaw/csaw.Rmd
+++ b/csaw/csaw.Rmd
@@ -18,10 +18,9 @@ require(statmod)
 Specify the bam files and create design matrix based on our experiment.
 
 ```{r}
-bam.files <- c("normal1_sorted_filtered.bam", "normal2_sorted_filtered.bam", 
-               "normal4_sorted_filtered.bam", 
-               "senescent1_sorted_filtered.bam", "senescent2_sorted_filtered.bam", 
-               "senescent4_sorted_filtered.bam") 
+fastq_dir="/Users/asifzubair/Skydrive/projects/atacseq/data/fastq"
+samples = c("normal1", "normal2", "normal4", "senescent1", "senescent2", "senescent4")
+bam.files = file.path(fastq_dir, paste0(samples, ".unique_q10minimum_noChrM.hg19.sorted.bam"))
 
 subject = factor(rep(c(1,2,3), 2))
 treatment = c(rep("N", 3), rep("S",3))
@@ -51,6 +50,8 @@ default.param <- readParam()
 default.param
 strict.param <- readParam(minq=50, dedup=TRUE)
 strict.param
+dedup.on <- readParam(dedup=TRUE, minq=50)
+dedupe.on
 ```
 
 ### Avoiding problematic regions ###
@@ -82,7 +83,7 @@ data$totals
 A suitable value of `max.frag` can be chosen by examining the distribution of fragment sizes using the `getPESizes` function.
 
 ```{r}
-pe.bam <- "normal1_sorted_filtered.bam"
+pe.bam <- bam.files[1]
 out <- getPESizes(pe.bam)
 frag.sizes <- out$sizes[out$sizes<=800]
 hist(frag.sizes, breaks=50, xlab="Fragment sizes (bp)", ylab="Frequency", main="")
@@ -116,11 +117,6 @@ plot(0:n, pe.corr, col="blue", ylim=c(0, 0.1), xlim=c(0, 1000),
 The coverage proﬁle around potential binding sites can be obtained with the profileSites function. Here, the binding sites are deﬁned by taking high-abundance 50 bp windows and identifying those that are locally maximal using findMaxima. For each selected window, profileSites records the coverage across the ﬂanking regions as a function of the distance from the edge of the window. This is divided by the count for the window itself to obtain a relative coverage, based on the speciﬁcation of weight. The values are then averaged across all windows to obtain an aggregated coverage proﬁle for each library.
 
 ```{r}
-bam.files <- c("normal1_sorted_filtered.bam", "normal2_sorted_filtered.bam", 
-               "normal4_sorted_filtered.bam", 
-               "senescent1_sorted_filtered.bam", "senescent2_sorted_filtered.bam", 
-               "senescent4_sorted_filtered.bam")
-
 collected <- list()
 
 for (curbam in bam.files) {
