--- a/csaw/atacseeker.Rmd
+++ b/csaw/atacseeker.Rmd
@@ -6,22 +6,26 @@ output: html_document
 ---
   
 
+
+<!-- TODO: Give brief description of the pipeline and workflow -->
+
+
+
+
 ```{r, message=FALSE, warning=FALSE, echo=FALSE}
-require(csaw) 
-require(edgeR)
-require(statmod)
-require(locfit)
-require(knitr)
+library(csaw) 
+library(edgeR)
+library(statmod)
+library(locfit)
+library(knitr)
 ```
 
 
-### Counting reads in windows ###
-
-
 ```{r, echo = FALSE}
+control.label = "Normal Cells"
+compare.label = "Senescent Cells"
+
 fastq_dir="/Users/asifzubair/SkyDrive/projects/atacseq/data/fastq"
-samples = c("normal1", "normal2", "normal4", "senescent1", "senescent2", "senescent4")
-bam.files = file.path(fastq_dir, paste0(samples, ".unique_q10minimum_noChrM.hg19.sorted.bam"))
 
 control = c("normal1", "normal2", "normal4")
 compare = c("senescent1", "senescent2", "senescent4")
@@ -29,15 +33,17 @@ compare = c("senescent1", "senescent2", "senescent4")
 control.files = file.path(fastq_dir, paste0(control, ".unique_q10minimum_noChrM.hg19.sorted.bam"))
 compare.files = file.path(fastq_dir, paste0(compare, ".unique_q10minimum_noChrM.hg19.sorted.bam"))
 
+samples = c(control, compare)
+bam.files = file.path(fastq_dir, paste0(samples, ".unique_q10minimum_noChrM.hg19.sorted.bam"))
 ```
 
-Let's look at the design matrix: 
+We construct the design matrix based on sample labels.
 
-```{r, echo=False}
+```{r, echo=FALSE}
 treatment = c(rep("N", length(control)), rep("Y",length(compare)))
 
 design <- model.matrix(~treatment) 
-colnames(design) <- c("Intercept", "Compare Group")
+colnames(design) <- c("Intercept", compare.label)
 rownames(design) <- samples
 
 kable(design, caption = "Design Matrix")
@@ -45,7 +51,7 @@ kable(design, caption = "Design Matrix")
 
 ## QC Metrics ##
 
-Diagnostic plot for fragment sizes:
+Diagnostic plots for fragment sizes:
 
 ```{r, echo=FALSE}
 
@@ -55,12 +61,12 @@ reads_qc = c()
 
 for (i in seq(length(control))){
 pe.bam <- control.files[i]
-out <- getPETSizes(pe.bam)
+out <- getPESizes(pe.bam)
 frag.sizes <- out$sizes[out$sizes<=800]
 reads_qc = rbind(reads_qc, c(sample = control[i], out$diagnostics, too.large=sum(out$sizes > 400)))
 #hist(frag.sizes, breaks=50, xlab="Fragment sizes (bp)", ylab="Frequency", main="")
 if (i ==1) {
-  plot(density(frag.sizes), xlab="Fragment sizes (bp)", ylab="Density", main="Control Group", ylim = c(0,0.015), col = i)
+  plot(density(frag.sizes), xlab="Fragment sizes (bp)", ylab="Density", main=control.label, ylim = c(0,0.015), col = i)
   abline(v=100, col="gray", lwd=4, lty=3)
   } else 
     lines(density(frag.sizes), col = i)
@@ -70,12 +76,12 @@ legend("topright", legend = control, col = seq(length(control)), lwd = 1, bty = 
 
 for (i in seq(length(compare))){
 pe.bam <- compare.files[i]
-out <- getPETSizes(pe.bam)
+out <- getPESizes(pe.bam)
 frag.sizes <- out$sizes[out$sizes<=800]
 reads_qc = rbind(reads_qc, c(sample = compare[i], out$diagnostics, too.large=sum(out$sizes > 400)))
 #hist(frag.sizes, breaks=50, xlab="Fragment sizes (bp)", ylab="Frequency", main="")
 if (i ==1) {
-  plot(density(frag.sizes), xlab="Fragment sizes (bp)", ylab="Density", main="Compare Group", ylim = c(0,0.015), col = i)
+  plot(density(frag.sizes), xlab="Fragment sizes (bp)", ylab="Density", main=compare.label, ylim = c(0,0.015), col = i)
   abline(v=100, col="gray", lwd=4, lty=3)
   } else 
     lines(density(frag.sizes), col = i)
@@ -88,7 +94,7 @@ kable(reads_qc, caption="Quality metrics for PE reads")
 ```
 
 
-Cross-correlation plot:
+<!-- TODO: Add description for cross correlation plot -->
 
 
 ```{r, echo=FALSE}
@@ -103,7 +109,7 @@ title("Cross Correlation Plot")
 Coverage plot for choosing winodw size :
 
 
-```{r, echo=FALSE, eval=FALSE}
+```{r, echo=FALSE}
 # Specify the readParam object
 dedup.on <- readParam(dedup=TRUE, minq=50) 
 collected <- list()
@@ -113,43 +119,47 @@ for (curbam in bam.files) {
   rwsms <- rowSums(assay(windowed))
   maxed <- findMaxima(rowRanges(windowed), range=1000, metric=rwsms)
   collected[[curbam]] <- profileSites(curbam, rowRanges(windowed)[maxed],
-  param=dedup.on, weight=1/rwsms[maxed])
+                                      param=dedup.on, weight=1/rwsms[maxed])
 }
 
 xranged <- as.integer(names(collected[[1]]))
-plot(xranged, collected[[1]], type="l", col=1, xlim=c(-1000, 1000), lwd=2,
-xlab="Distance (bp)", ylab="Relative coverage per base")
-lines(xranged, collected[[2]], col=2, lwd=2)
-lines(xranged, collected[[3]], col=3, lwd=2)
-lines(xranged, collected[[4]], col=4, lwd=2)
-lines(xranged, collected[[5]], col=5, lwd=2)
-lines(xranged, collected[[6]], col=6, lwd=2)
-legend("topright", col=c(1:6), samples, pch=16)
+
+for (i in seq(length(samples))){
+  if (i ==1)
+    plot(xranged, collected[[i]], type="l", col=i, 
+     xlim=c(-1000, 1000), lwd=1,
+     xlab="Distance (bp)", ylab="Relative coverage per base")
+  else
+    lines(xranged, collected[[i]], col=i, lwd=1)
+}
+
+legend("topright", col=seq(length(samples)), samples, pch=16)
 title("coverage profile around potential binding sites")
-abline(v=c(-100,150), col="dodgerblue", lty=2, lwd=4)
+abline(v=c(-150,150), col="gray", lty=3, lwd=4)
 ```
 
 
 Finally, couting reads by windows :
 
 
-```{r}
+```{r, echo=FALSE,comment=""}
 frag.len <- 400
 window.width <- 150
 pe.param <- readParam(max.frag = frag.len, pe = "both")
+pe.param
 data <- windowCounts(bam.files, width = window.width, param = pe.param)
-data$totals
+kable(as.data.frame(data$totals, row.name=samples), caption="Total number of reads in each library")
 ```
 
 
-### Normalization factors ###
+### Normalization ###
 
 
-```{r}
+```{r, echo=FALSE}
 param<- readParam()
 binned <- windowCounts(bam.files, bin=TRUE, width=10000, param=param)
-normfacs <- normalize(binned)
-kable(normfacs)
+Norm.factors <- normalize(binned)
+kable(as.data.frame(Norm.factors, row.names=samples), caption="Normalizing factors")
 ```
 
 
@@ -189,7 +199,7 @@ plotMDS(bin.adjc, labels=samples)
 
 
 ```{r}
-y <- asDGEList(data, norm.factors=normfacs)
+y <- asDGEList(data, norm.factors=Norm.factors)
 y <- estimateDisp(y, design)
 fit <- glmQLFit(y, design, robust=TRUE)
 #contrast <- makeContrasts(es - tn, levels=design)
