--- a/atacseeker/scripts/atacseeker.Rmd
+++ b/atacseeker/scripts/atacseeker.Rmd
@@ -335,12 +335,25 @@ abline(v=global.bg[1], col="red", lwd=2)
 abline(v=global.bg[1]+log2(3), col="blue", lwd=2)
 legend("topright", lwd=2, col=c('red', 'blue'), legend=c("Background", "Threshold"))
 
-kable(as.data.frame(colSums(assays(data)$counts), row.name=samples), 
+raw = colSums(assays(data)$counts)
+filtered = colSums(assays(filtered.data)$counts)
+
+kable(as.data.frame(raw, row.name=samples), 
     caption="Total number of reads in each library", col.names = "total reads")
 
 filtered.data <- data[keep,]
-kable(as.data.frame(colSums(assays(filtered.data)$counts), row.name=samples), 
+kable(as.data.frame(filtered, row.name=samples), 
     caption="Total number of reads post filtering.", col.names = "total reads")
+
+par(mar = mars)
+m = as.matrix(rbind(raw, filtered))
+colnames(m) = samples
+barplot(as.matrix(c), beside=TRUE, col = c(rep("blue", 2*length(control)), rep("red", 2*length(compare))), 
+    cex.names = 0.8, width = 1/(num_samples + 1), las = 3)
+barplot(as.matrix(c), add=TRUE, beside=TRUE, col=1, angle=45, density=c(0,5), 
+    cex.names = 0.8, width = 1/(num_samples + 1), las = 3)
+legend("top", legend=letters[1:4], ncol=4, fill=TRUE, cex=1.5, col=c("blue", "blue", "red", "red"))
+legend("top", legend=letters[1:4], ncol=4, fill=TRUE, cex=1.5, col=1, angle=45, density=c(0,5))
 ```
 
 ## Normalization ##
